# micro-gpt

./: .gitignore  BPEtokeniser.py  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  train.py
inference/: base_model.py  fine_tune_model.py
microgpt/: __init__.py  config.py  model.py  tokenizer.py  train.py
microgpt/data/: __init__.py  alpaca.py  dataset.py  finetune_dataset.py  fineweb.py  hh_rlhf.py  hh_rlhf_chosen.py  no_robots.py  pretrain_dataset.py
microgpt/datasets/: fineweb.py  hh_rlhf.py  hh_rlhf_chosen.py
microgpt/model/: __init__.py  attention.py  block.py  lora.py  model.py  rope.py
microgpt/modules/: attention.py  block.py  lora.py  rope.py
microgpt/tokenizer/: __init__.py  tokenizer.py
microgpt/train/: finetune.py  pretrain.py
scripts/: export_model.py
src/: BPEtokeniser.py  GPT2tokeniser.py  api.py  config.py  dataset.py  fine_tune.py  model.py  preprocess.py  test.py  tokenizer.py  train.py
src/data/: BPEtokeniser.py  GPT2tokeniser.py  create_bpe.py  dataset.py  preprocess.py
src/fine_tune/: dataset.py  model.py  train.py
src/pre_train/: dataset.py  model.py  train.py
tests/: model_test.py  test_base_model.py  test_finetuned_model.py
training/: finetune.sh  pretrain.sh  reward.sh
