[project]
name = "microgpt"
version = "0.1.0"
description = "A Conversational Large Language Model"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Zain Sharief", email = "zain.sharief21@gmail.com" }
]
dependencies = [
    "datasets==3.3.2",
    "numpy==2.3.3",
    "setuptools==75.8.2",
    "transformers==4.49.0",
    "torch==2.6.0",
    "wandb>=0.25.0",
]

[project.optional-dependencies]
flash-attn = ["flash-attn==2.8.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
    { index = "pypi", marker = "sys_platform != 'linux'" }
]
